--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "strapi": "3.0.0-beta.19.5",
-    "strapi-admin": "3.0.0-beta.19.5",
-    "strapi-utils": "3.0.0-beta.19.5",
-    "strapi-plugin-content-type-builder": "3.0.0-beta.19.5",
-    "strapi-plugin-content-manager": "3.0.0-beta.19.5",
-    "strapi-plugin-users-permissions": "3.0.0-beta.19.5",
-    "strapi-plugin-email": "3.0.0-beta.19.5",
-    "strapi-plugin-upload": "3.0.0-beta.19.5",
-    "strapi-connector-mongoose": "3.0.0-beta.19.5"
+    "strapi": "3.0.0-beta.20",
+    "strapi-admin": "3.0.0-beta.20",
+    "strapi-connector-bookshelf": "3.0.0-beta.20",
+    "strapi-plugin-content-manager": "3.0.0-beta.20",
+    "strapi-plugin-content-type-builder": "3.0.0-beta.20",
+    "strapi-plugin-email": "3.0.0-beta.20",
+    "strapi-plugin-graphql": "3.0.0-beta.20",
+    "strapi-plugin-upload": "3.0.0-beta.20",
+    "strapi-plugin-users-permissions": "3.0.0-beta.20",
+    "strapi-utils": "3.0.0-beta.20"
   },
   "author": {
     "name": "A Strapi developer"
