added missing dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,6 @@ Icon
 .Trashes
 ._*
 
-
 ############################
 # Linux
 ############################
@@ -59,6 +58,7 @@ $RECYCLE.BIN/
 *.swm
 *.out
 *.pid
+package-lock.json
 
 
 ############################
