--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "devDependencies": {},
   "dependencies": {
+    "axios": "^0.19.0",
+    "knex": "latest",
+    "lodash": "^4.17.5",
     "pg": "^8.0.2",
     "strapi": "3.0.0-beta.20",
     "strapi-admin": "3.0.0-beta.20",
