--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "strapi": "3.0.0-beta.20",
     "strapi-admin": "3.0.0-beta.20",
     "strapi-connector-bookshelf": "3.0.0-beta.20",
+    "strapi-connector-mongoose": "3.0.0-beta.20",
     "strapi-plugin-content-manager": "3.0.0-beta.20",
     "strapi-plugin-content-type-builder": "3.0.0-beta.20",
     "strapi-plugin-email": "3.0.0-beta.20",
