updated packages and connection string

--- a/package.json
+++ b/package.json
@@ -11,20 +11,26 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "axios": "^0.19.0",
-    "knex": "latest",
+    "knex": "^0.20.0",
     "lodash": "^4.17.5",
-    "pg": "^8.0.2",
+    "mysql": "^2.17.1",
+    "pg": "^7.10.0",
+    "sqlite3": "^4.0.6",
     "strapi": "3.0.0-beta.20",
     "strapi-admin": "3.0.0-beta.20",
     "strapi-connector-bookshelf": "3.0.0-beta.20",
     "strapi-connector-mongoose": "3.0.0-beta.20",
+    "strapi-middleware-views": "3.0.0-beta.20",
     "strapi-plugin-content-manager": "3.0.0-beta.20",
     "strapi-plugin-content-type-builder": "3.0.0-beta.20",
+    "strapi-plugin-documentation": "3.0.0-beta.20",
     "strapi-plugin-email": "3.0.0-beta.20",
     "strapi-plugin-graphql": "3.0.0-beta.20",
     "strapi-plugin-upload": "3.0.0-beta.20",
     "strapi-plugin-users-permissions": "3.0.0-beta.20",
+    "strapi-provider-email-mailgun": "3.0.0-beta.20",
+    "strapi-provider-upload-aws-s3": "3.0.0-beta.20",
+    "strapi-provider-upload-cloudinary": "3.0.0-beta.20",
     "strapi-utils": "3.0.0-beta.20"
   },
   "author": {
