updated networks on dapps and blockchains

--- a/api/blockchains/models/blockchains.settings.json
+++ b/api/blockchains/models/blockchains.settings.json
@@ -17,8 +17,11 @@
       "type": "text"
     },
     "dapp_profiles": {
-      "via": "blockchain",
-      "collection": "dapp-profile"
+      "collection": "dapp-profile",
+      "via": "blockchain"
+    },
+    "networks": {
+      "collection": "network"
     }
   }
 }
