--- a/api/category/models/category.settings.json
+++ b/api/category/models/category.settings.json
@@ -17,8 +17,8 @@
       "type": "text"
     },
     "dapp_profiles": {
-      "collection": "dapp-profile",
-      "via": "category"
+      "via": "category",
+      "collection": "dapp-profile"
     }
   }
 }
