--- a/api/network/models/network.settings.json
+++ b/api/network/models/network.settings.json
@@ -15,6 +15,10 @@
     },
     "dexription": {
       "type": "text"
+    },
+    "dapp_profiles": {
+      "via": "network",
+      "collection": "dapp-profile"
     }
   }
 }
