linked products to user

--- a/api/em-kambo-products/models/em-kambo-products.settings.json
+++ b/api/em-kambo-products/models/em-kambo-products.settings.json
@@ -25,6 +25,11 @@
       ],
       "plugin": "upload",
       "required": false
+    },
+    "user": {
+      "plugin": "users-permissions",
+      "model": "user",
+      "via": "e_mkambo_products"
     }
   }
 }
